cloudlab build fixes and experiment infra improvements
Build fixes:
- Upgrade maven-shade-plugin 3.0.0 → 3.2.4 (client + vm worker pom.xml)
- Shade io.netty to avoid classpath conflicts with Kafka's bundled Netty
- Source executor memory 768MB → 2048MB in 12-compute config

Runtime / JVM tuning (ContainerManager):
- Add HeapDumpOnOutOfMemoryError + GC logging to executor JVM flags
- Limit Netty heap/direct arenas to 2 each via system property

Diagnostics (DefaultByteTransportImpl):
- Add Netty allocator diagnostic logging at startup and every 30s on a
  daemon thread (reflection-based for Netty 4.0.x/4.1.x compatibility)

Kafka CLI migration (metrics_collector, run_autoscaler_smoke, run_sponge_q0_benchmark):
- Replace deprecated --zookeeper / --broker-list flags with
  --bootstrap-server for Kafka 3.x compatibility

Harness improvements (run_autoscaler_smoke, run_q6_warmup_then_main, run_sponge_q0_benchmark):
- Autoscaler commands (start-scaler, start-backpressure) now gated on
  AUTOSCALING=true flag instead of always emitted
- run_q6_warmup_then_main: per-phase COMPLETION_MODE and AUTOSCALING
  overrides (WARMUP_COMPLETION_MODE, WARMUP_AUTOSCALING)
- run_sponge_q0_benchmark: add queue_drained completion mode (polls
  scaler_metrics.csv VM queue size) and expose queue in progress log

New configs:
- nemo-yarn-kafka-1source-8slot-4compute.json (4-node compute variant)
- nemo-yarn-kafka-1source-8slot-4compute-8g.json (4-node, 8GB memory)

Results:
- nemo-q6-holostream-50k100k-20260710-011554 (HoloStream baseline run)
- nemo-q6-holostream-50k100k-8g-20260710-013349 (8GB memory variant)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>